# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-make-lint.yml
brain_games/: cli.py  even_quiz.py  game_engine.py  general_logic.py
brain_games/games/: calc.py  calc_logic.py  even.py  even_logic.py  gcd.py  gcd_logic.py  general_logic.py  prime.py  prime_logic.py  progr_logic.py  progression.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
